--- a/src/app/app.css
+++ b/src/app/app.css
@@ -8,6 +8,7 @@ html, body, #root {
   margin-top: 5px;
 }
 .menutitle {
+  color: white;
   text-align: right;
   white-space: nowrap;
   display: inline;
